--- a/packages/examples/Nazar/Pz1/app/src/main/AndroidManifest.xml
+++ b/packages/examples/Nazar/Pz1/app/src/main/AndroidManifest.xml
@@ -10,13 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PART"
-        android:localeConfig="@xml/locales_config">
+        android:theme="@style/Theme.Pz1">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.PART">
+            android:theme="@style/Theme.Pz1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
