--- a/packages/application/gradle/libs.versions.toml
+++ b/packages/application/gradle/libs.versions.toml
@@ -16,8 +16,7 @@ biometric = "1.2.0-alpha05"
 media3Exoplayer = "1.8.0"
 foundation = "1.10.0"
 securityVersion = "1.1.0-alpha03"
-jbcrypt = "0.4"
-credentialsVersion = "1.2.0-alpha01"
+themeVersion = "1.11.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,7 +44,8 @@ androidx-biometric = { group = "androidx.biometric", name = "biometric-ktx", ver
 androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 androidx-security = { group = "androidx.security", name = "security-crypto", version.ref = "securityVersion" }
-jbcrypt = { group = "org.mindrot", name = "jbcrypt", version.ref = "jbcrypt" }
+google-material = { group = "com.google.android.material", name = "material", version.ref = "themeVersion"}
+
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
