--- a/packages/application/gradle/libs.versions.toml
+++ b/packages/application/gradle/libs.versions.toml
@@ -17,6 +17,10 @@ media3Exoplayer = "1.8.0"
 foundation = "1.10.0"
 securityVersion = "1.1.0-alpha03"
 themeVersion = "1.11.0"
+dataStoreVersion = "1.0.0"
+core = "1.17.0"
+roomVersion = "2.5.0"
+kspVersion = "2.0.21-1.0.27"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -45,13 +49,15 @@ androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplaye
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 androidx-security = { group = "androidx.security", name = "security-crypto", version.ref = "securityVersion" }
 google-material = { group = "com.google.android.material", name = "material", version.ref = "themeVersion"}
-
+androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStoreVersion"}
+androidx-datastore-core = { group = "androidx.datastore", name = "datastore-preferences-core", version.ref = "dataStoreVersion"}
+androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
+androidx-room = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion"}
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-
-
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
