Додано обробку Qr кода та генерацію палітри через api

--- a/packages/application/gradle/libs.versions.toml
+++ b/packages/application/gradle/libs.versions.toml
@@ -19,9 +19,13 @@ securityVersion = "1.1.0-alpha03"
 themeVersion = "1.11.0"
 dataStoreVersion = "1.0.0"
 core = "1.17.0"
-roomVersion = "2.5.0"
+roomVersion = "2.6.1"
 kspVersion = "2.0.21-1.0.27"
 gson = "2.10.1"
+okhttp = "4.11.0"
+camera = "1.3.0"
+zxingAndroidEmbedded = "4.3.0"
+zxingCore = "3.5.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,13 +53,19 @@ androidx-biometric = { group = "androidx.biometric", name = "biometric-ktx", ver
 androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "foundation" }
 androidx-security = { group = "androidx.security", name = "security-crypto", version.ref = "securityVersion" }
-google-material = { group = "com.google.android.material", name = "material", version.ref = "themeVersion"}
-androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStoreVersion"}
-androidx-datastore-core = { group = "androidx.datastore", name = "datastore-preferences-core", version.ref = "dataStoreVersion"}
+google-material = { group = "com.google.android.material", name = "material", version.ref = "themeVersion" }
+androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "dataStoreVersion" }
+androidx-datastore-core = { group = "androidx.datastore", name = "datastore-preferences-core", version.ref = "dataStoreVersion" }
 androidx-core = { group = "androidx.core", name = "core", version.ref = "core" }
-androidx-room = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion"}
-androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion"}
-google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+androidx-room = { group = "androidx.room", name = "room-ktx", version.ref = "roomVersion" }
+androidx-room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "roomVersion" }
+google-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+androidx-camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "camera" }
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "camera" }
+androidx-camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "camera" }
+google-zxing = { group = "com.google.zxing", name = "core", version.ref = "zxingCore" }
+zxing-android-embedded = { module = "com.journeyapps:zxing-android-embedded", version.ref = "zxingAndroidEmbedded" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -63,3 +73,4 @@ kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspVersion" }
+
